styles.css
@font-face {
  font-family: "Red Hat Display";
  font-style: normal;
  font-weight: 500;
  src: local("Red Hat Display"),
    url("fonts/RedHatDisplay-Medium.ttf") format("truetype");
}
@font-face {
  font-family: "Red Hat Display";
  font-style: normal;
  font-weight: 900;
  src: local("Red Hat Display"),
    url("fonts/RedHatDisplay-Black.ttf") format("truetype");
}

*,
::before,
::after {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

img {
  display: block;
  max-inline-size: 100%;
}

:root {
  --cyan-600: #4d96a9;
  --cyan-300: #8fe3f9;
  --cyan-100: #71c0d4;
  --purple-600: #855fb1;
  --purple-300: #d9b8ff;
  --purple-100: #b18bdd;
  --slate-900: #28283d;
  --slate-600: #87879d;
  --slate-300: #d1d1df;
  --white: #fafafa;
  --space-16-32: clamp(1rem, 0.6479rem + 1.5023vw, 2rem);
  --space-24-32: clamp(1.5rem, 0.9286rem + 1.1905vw, 2rem);
  --space-32-80: clamp(2rem, -1.4286rem + 7.1429vw, 5rem);
  --space-64-112: clamp(4rem, 0.5714rem + 7.1429vw, 7rem);
  --space-32-56: clamp(2rem, 0.5687rem + 6.1069vw, 3.5rem);
  --space-64-72: clamp(4rem, 3.4286rem + 1.1905vw, 4.5rem);
  --space-32-64: clamp(2rem, 0.0916rem + 8.1425vw, 4rem);
  --space-48-80: clamp(3rem, 0.7143rem + 4.7619vw, 5rem);
  --space-48-72: clamp(3rem, 1.5687rem + 6.1069vw, 4.5rem);
  --font-base: "Red Hat Display", sans-serif;
  --font-40-64: clamp(2.5rem, 1.9718rem + 2.2535vw, 4rem);
  --font-32-40: clamp(2rem, 1.8239rem + 0.7512vw, 2.5rem);
  --font-16-18: clamp(1rem, 0.8571rem + 0.2976vw, 1.125rem);
  --font-12-16: clamp(0.75rem, 0.662rem + 0.3756vw, 1rem);
  --static-16: 1rem;
  --static-17: 1.0625rem;
  --static-32: 2rem;
  --static-40: 2.5rem;
  --static-64: 4rem;
  --corner-radius: 1.8125rem;
  --corner-radius-image: 0.5rem;
  --number-width: 3.5rem;
  --number-tail-width: 5rem;
  --number-border-width: 0.0625rem;
  --min-grid-img-size: 9.21875rem;
  --max-grid-size: 70rem;
}

body {
  font-family: var(--font-base);
  line-height: 1.5;
  font-size: var(--static-16);
  text-align: center;
}

main {
  padding-inline: var(--space-32-80);
  padding-block-start: var(--space-32-56);
  padding-block-end: var(--space-64-72);
}

h1 {
  font-size: var(--font-40-64);
  max-inline-size: 10ch;
}

h2 {
  max-inline-size: 19ch;
  font-size: var(--font-32-40);
  color: var(--slate-900);
}

p {
  font-size: var(--font-16-18);
  max-inline-size: 40ch;
  color: var(--slate-600);
}

h1,
h2 {
  line-height: 1.1;
  font-weight: 900;
  color: var(--slate-900);
}

p,
h1,
h2 {
  margin-inline: auto;
}

nav {
  padding-block-start: var(--space-48-80);
  display: flex;
  justify-content: center;
}

hgroup p {
  color: var(--cyan-600);
  font-weight: 900;
  letter-spacing: 4px;
  line-height: 1.1;
  font-size: var(--font-12-16);
  text-transform: capitalize;
}

hgroup > * + * {
  margin-block-start: var(--static-16);
}

header {
  overflow: hidden;
}

.hero {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: var(--space-48-72);
  padding-block-start: var(--static-64);
  padding-block-end: var(--space-32-64);
}

.hero-body {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: var(--space-24-32);
  padding-inline: var(--space-32-80);
}

.btn-wrapper {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  justify-items: center;
  gap: var(--static-17);
}

.hero::before {
  content: "";
  background: url("assets/tablet/image-hero.png") no-repeat center / contain;
  width: 107%;
  min-inline-size: 27.0625rem;
  aspect-ratio: 820 / 303;
}

@media (min-width: 1440px) {
  .hero {
    flex-direction: row;
    justify-content: space-between;
    margin-inline: auto;
    gap: 0;
  }

  .hero::before {
    content: url("assets/desktop/image-hero-left.png");
    /* we need to reset the mobile before element*/
    background: none;
    width: auto;
    min-inline-size: auto;
    aspect-ratio: unset;
    position: relative;
    left: -2%;
  }
  .hero::after {
    content: url("assets/desktop/image-hero-right.png");
    position: relative;
    right: -2%;
  }
}

.example-images {
  display: grid;
  grid-template-columns: repeat(
    auto-fit,
    minmax(var(--min-grid-img-size), 1fr)
  );
  gap: var(--space-16-32);
  max-inline-size: var(--max-grid-size);
  margin-inline: auto;
}

.example-images img {
  border-radius: var(--corner-radius-image);
}

.main-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: var(--static-32);
}

main article > * + * {
  margin-block-start: var(--static-64);
}

footer .number {
  top: 1.75rem;
}

.call-to-action {
  background-image: url("assets/mobile/image-footer.jpg");
  padding-inline: var(--space-32-80);
  padding-block: var(--space-64-112);
  background-color: var(--cyan-600);
  background-blend-mode: soft-light;
  background-size: cover;
  background-repeat: no-repeat;
  color: var(--white);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: var(--space-24-32);
}

.call-to-action :is(h2, p) {
  color: var(--white);
}

@media (min-width: 768px) {
  .call-to-action {
    background-image: url("assets/tablet/image-footer.jpg");
  }
}

@media (min-width: 1280px) {
  .call-to-action {
    background-image: url("assets/desktop/image-footer.jpg");
    flex-direction: row;
    text-align: left;
  }
  .call-to-action h2 {
    max-inline-size: 15ch;
  }
}
/*components*/
.btn {
  border-radius: var(--corner-radius);
  padding-inline: var(--static-40);
  padding-block: var(--static-16);
  background-color: var(--btn-bg-color, var(--slate-900));
  color: var(--white);
  border: none;
  transition: all 300ms ease-in-out;
  font-size: inherit;
  font-family: inherit;
  font-weight: 900;
  line-height: inherit;
}

.btn:hover {
  background-color: var(--btn-bg-color-hover, var(--slate-300));
}

.btn-cyan {
  --btn-bg-color-hover: var(--cyan-100);
  --btn-bg-color: var(--cyan-600);
}

.btn-purple {
  --btn-bg-color-hover: var(--purple-100);
  --btn-bg-color: var(--purple-600);
}

.number {
  border-radius: 50%;
  inline-size: var(--number-width);
  block-size: var(--number-width);
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--white);
  color: var(--slate-600);
  font-size: var(--static-16);
  font-weight: 900;
  border: var(--slate-300) solid var(--number-border-width);
  margin-block-start: var(--number-tail-width);
  position: relative;
  left: 50%;
  transform: translateX(-50%);
}

.number::before {
  content: "";
  block-size: var(--number-tail-width);
  position: absolute;
  border-inline-start: var(--slate-300) solid var(--number-border-width);
  top: calc(-1 * var(--number-tail-width));
}

/*utilities*/

.color-purple-300 {
  color: var(--purple-300);
}

.color-cyan-300 {
  color: var(--cyan-300);
}

